--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ua">
   <head>
     <title>Save Health</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
       <header class="site-header">
         <h1>Save Health</h1>
         <p>Prioritize well-being and a healthy lifestyle</p>
-        <img src="img//pic.jpg" width="359" height="159" alt="Health concept photo">
+        <img src="img/pic.jpg" width="359" height="159" alt="Health concept photo">
       </header>
 
       <section class="features">
@@ -42,5 +42,5 @@
       </footer>
     </div>
   </body>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </html>
