--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ua">
   <head>
-    <title>Save Health</title>
+    <title>Кушнірук Save Health</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
