--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         </ul>
       </section>
 
+      <section class="gallery">
+        <img src="img/left-arrow.png" alt="Left arrow" id="left-arrow" class="gallery-arrows">
+        <img src="img/main-image.png" alt="Main img" id="main-image">
+        <img src="img/right-arrow.png" alt="Right arrow" id="right-arrow" class="gallery-arrows">
+      </section>
+
       <section class="wishes">
         <h2>Health Wishes!</h2>
         <button id = "btn_health_wishes">Take a health wish</button>
