Array of vitamins added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <p id = "health-wishes">Your health wish is on the way</p>
       </section>
 
+      <section class="vitamins">
+        <h2>Vitamins</h2>
+        <p id = "p-vitamin"></p>
+      </section>
+
       <footer class="site-footer">
         <p id = "health-wishes-footer">Buy Health Tips 💚</p>
         <p id = "count-of-tablets">💊❌❌❌❌</p>
