Vitamins catalog added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
       <section class="vitamins">
         <h2>Vitamins</h2>
-        <p id = "p-vitamin"></p>
+        <p id = "p-vitamin">
+        </p>  
       </section>
 
       <footer class="site-footer">
